# ROS_TP2

./: .gitignore  readMe.md
handball/: CMakeLists.txt  package.xml
handball/launch/: bird.launch.xml  handball.launch.xml  task_1.launch.xml
handball/src/: coach.cpp
handball_msgs/: package.xml
handball_msgs/action/: SubstitutionExecution.action
handball_msgs/msg/: BallPosition.msg  PlanarTwist.msg  PlayerControl.msg  Posture.msg  Whistle.msg
handball_msgs/srv/: SubstitutionApproval.srv
src/handball/: CMakeLists.txt  package.xml
src/handball/launch/: handball.launch.py  handball.launch.xml
src/handball/src/: ball.cpp  coach.cpp  controller.cpp  player_node.cpp  referee.cpp
src/handball/urdf/: multi_robots.urdf  multi_robots.xacro
src/handball_msgs/: CMakeLists.txt  package.xml
src/handball_msgs/msg/: BallState.msg  BallVelocity.msg  CoachInstruction.msg  PlanarTwist.msg  PlayerControl.msg  PlayerState.msg  Posture.msg  Whistle.msg
src/handball_msgs/srv/: SubstitutionApproval.srv  SubstitutionExecution.srv
