<?xml version="1.0"?>
<package format="3">
  <name>handball</name>
  <version>0.0.1</version>
  <description>handball game simulation</description>

  <maintainer email="you@example.com">John Dow</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>visualization_msgs</depend>
  <depend>handball_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

